--- a/sound3.html
+++ b/sound3.html
@@ -25,7 +25,7 @@
         <b>Insert a description of your sonic interaction design here! </b>
         <br />
         <br />
-        We imagine the scenario that pointing your phone at the door rings the doorbell!
+        We imagine the scenario that pointing your phone at the door rings the doorbell! It’s useful for when you cannot reach the door physically, maybe you’re in a wheelchair and cannot go up the stairs. Or you don’t want to trespass someones yard.
       </p>
     </div>
 
